More attempts to get the folder working

--- a/SharpShell/Tools/ServerManager/Properties/Resources.resx
+++ b/SharpShell/Tools/ServerManager/Properties/Resources.resx
@@ -157,4 +157,7 @@
   <data name="Debug" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Debug.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="View_ExtraLargeIcons" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\View_ExtraLargeIcons.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
