--- a/SharpShell/Tools/ServerManager/ServerManagerForm.resx
+++ b/SharpShell/Tools/ServerManager/ServerManagerForm.resx
@@ -127,109 +127,109 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC8
-        FwAAAk1TRnQBSQFMAgEBBQEAAXABAQFwAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIDIAAw4BEwNIAYUDXQHTAWgCZQH2A10B0wNIAYYDDwEUyAABmwFaAT8B/wGA
-        ATYBFwH/AW4BNQEVAf8BbgEzARMB/wFtATEBEQH/AWwBLwEOAf8BagEvARAB/wGBAV4BVQH/AcEBpgGf
-        Af8BxAFjAU0B/wGhAUkBMgH/Aa4BXAFIAf8BwwGlAZ8B/wGAAVsBUQH/Aw8BFMQAAZ4BXgFDAf8BiwHQ
-        AZgB/wGJAdEBmAH/AWUBxQGIAf8BTgG3AWMB/wE4AakBUgH/AUoBjAFXAf8BwQGpAaEB/wGyATcBFAH/
-        AcsBiwFkAf8B+AL3Af8BsAFRATwB/wG/ATMBFQH/AcIBpQGfAf8DSAGGxAABogFkAUoB/wG6AeYBwgH/
-        AacB4AGyAf8BkgHXAZ8B/wFsAckBjgH/AVQBugFpAf8BhgGUAYcB/wHIAWsBTgH/AbABNQEPAf8BywGL
-        AWUB/wHnAegB6QH/AbABWAFEAf8BtwEuAQwB/wG9AVkBQAH/A10B08QAAacBagFRAf8BpAHeAa8B/wHR
-        Ae8B1gH/AacB4AGyAf8BjQHUAZsB/wFmAcUBiQH/ApUBkgH/Ac0BXAE3Af8ByQFRASoB/wHPAZEBagH/
-        AegB6QHqAf8BsgFfAUkB/wGwAS8BCgH/Aa4BOAEWAf8BaAJlAfbEAAGsAYMBWQH/AZsBpAGFAf8BpwHg
-        AbIB/wHRAe8B1gH/AacB4AGyAf8BiQHRAZgB/wGMAZcBjQH/AdYBjwFhAf8B1gFgATcB/wHaAZEBZQH/
-        AfMBzAG9Af8BvAFTATMB/wG0ATsBFQH/AbwBYQFFAf8DXQHTxAABsgGLAWIB/wHtAeMB3QH/AZsBngGC
-        Af8BpQHfAbAB/wHQAe4B1gH/AaUB3gGwAf8BbgGiAYYB/wHJAbIBqgH/AeQBgAFGAf8B7wGNAVUB/wH6
-        Ae8B6AH/AeUBgAFIAf8BzQFcATQB/wHEAawBowH/A0gBhcQAAbgBkgFrAv8B/AH7Af8B7QHjAd0B/wGb
-        AYIBYAH/AaYB3gGwAf8BsQHiAboB/wFXAU4BOwH/AZYBjAGHAf8ByQGyAasB/wHoAZ4BbQH/AfIBowGD
-        Af8B4wGQAV0B/wHGAa4BpgH/AYEBXgFVAf8DDgETxAABvQGaAYQC/wH8AfsC/wH8AfsB/wHpAd4B2AH/
-        AZsBggFgAf8BmwGCAWAB/wHuAdYByQH/AfIB1gHIAf8BuwGoAZ8B/wGkAZoBlgH/AZoBlQGUAf8BpAGY
-        AZMB/wGfAY4BhgH/AWoBLwEQAf/IAAHCAaABiwL/AfwB+wL/AfwB+wL/AfwB+wL/AfgB9QH/Af4B8wHt
-        Af8B/gHtAeQB/wHUAcUB0gH/AQ8BQgHLAf8BDgFAAcYB/wHRAbEBrwH/AfwBygGwAf8BygGnAZUB/wFs
-        AS8BDgH/yAABxgGmAZIC/wH8AfsC/wH8AfsC/wH8AfsC/wH8AfsC/wH4AfUB/wH+AfMB7QH/AR8BTQHU
-        Af8BYQG+AfkB/wEzAYwBywH/AQ4BQAHGAf8B/AHQAbkB/wHSAa0BmgH/AW0BMQERAf/IAAHJAaoBlgL/
-        AfwB+wL/AfwB+wL/AfwB+wL/AfwB+wL/AfwB+wL/AfgB9QH/ASABTwHXAf8BuQHkAv8BYQG+AfkB/wEP
-        AUIBywH/Af0B1wHDAf8B2QGzAZ8B/wFuATMBEwH/yAAByQGqAZYC/wH8AfsC/wH8AfsC/wH8AfsC/wH8
-        AfsC/wH8AfsC/wH8AfsB/wHXAdQB7AH/ASABTwHXAf8BHwFOAdQB/wHUAcUB0gH/Af0B3wHPAf8B3gG3
-        AaMB/wFuATUBFQH/yAAByQGqAZYC/wH8AfsC/wH8AfsC/wH8AfsC/wH8AfsC/wH8AfsC/wH8AfsC/wH8
-        AfsC/wH4AfUB/wH+AfMB7QH/Af4B7QHkAf8B/QHmAdoB/wH9Ad8BzwH/AYABNgEXAf/IAAHJAaoBlgH/
-        AckBqgGWAf8ByQGqAZYB/wHJAaoBlgH/AcYBpgGSAf8BwgGgAYsB/wG9AZoBhAH/AbgBkgFrAf8BsgGL
-        AWIB/wGsAYMBWQH/AacBagFRAf8BogFkAUoB/wGeAV4BQwH/AZsBWgE/Af//AP8AjgABugGhAZIB/wGt
-        AZcBiAH/AaYBkAGAAf8BnwGIAVwB/wGZAYIBVQH/AZMBYAFOAf8BjAFYAUcB/wGGAVEBPwH/AWMBSgE3
-        Af8BXAFDATAB/wFWATwBKAH/AVABNgEhAf8BSwEwARwB/wFIAS0BFwH/RAABmwE9ASIB/wGAARkBAAH/
-        AVEBGAEAAf8BUQEWAQAB/wFQARQBAAH/AU8BEgEAAf8BTgEPAQAB/wFNAQ0BAAH/AUwBCgEAAf8BSwEH
-        AQAB/wFKAQUBAAH/AUkBAwEAAf8BSQEBAQAB/wFIAgAB/0wAAb0BpgGYAf8BAAP/AQAD/wEAA/8BAAP/
-        AQAD/wEAA/8BAAP/AQAD/wEAA/8BAAP/AQAD/wEAA/8BTgE0AR8B/wQAA2IB7wGZAagBrAH/AZkBqAGs
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACw
+        FwAAAk1TRnQBSQFMAgEBBQEAAYgBAQGIAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIDIAAw4BEwNIAYUDXQHTA2IB9gNdAdMDSAGGAw8BFMgAAZsBVwE8Af8BgAEz
+        ARQB/wFrATIBEgH/AWsBMAEQAf8BagEuAQ4B/wFpASwBCwH/AWcBLAENAf8BgQFbAVIB/wHBAaYBnwH/
+        AcQBYAFKAf8BoQFGAS8B/wGuAVkBRQH/AcMBpQGfAf8BgAFYAU4B/wMPARTEAAGeAVsBQAH/AYsB0AGY
+        Af8BiQHRAZgB/wFiAcUBiAH/AUsBtwFgAf8BNQGpAU8B/wFHAYwBVAH/AcEBqQGhAf8BsgE0AREB/wHL
+        AYsBYQH/AfgC9wH/AbABTgE5Af8BvwEwARIB/wHCAaUBnwH/A0gBhsQAAaIBYQFHAf8BugHmAcIB/wGn
+        AeABsgH/AZIB1wGfAf8BaQHJAY4B/wFRAboBZgH/AYYBlAGHAf8ByAFoAUsB/wGwATIBDAH/AcsBiwFi
+        Af8B5wHoAekB/wGwAVUBQQH/AbcBKwEJAf8BvQFWAT0B/wNdAdPEAAGnAWcBTgH/AaQB3gGvAf8B0QHv
+        AdYB/wGnAeABsgH/AY0B1AGbAf8BYwHFAYkB/wKVAZIB/wHNAVkBNAH/AckBTgEnAf8BzwGRAWcB/wHo
+        AekB6gH/AbIBXAFGAf8BsAEsAQcB/wGuATUBEwH/A2IB9sQAAawBgwFWAf8BmwGkAYUB/wGnAeABsgH/
+        AdEB7wHWAf8BpwHgAbIB/wGJAdEBmAH/AYwBlwGNAf8B1gGPAV4B/wHWAV0BNAH/AdoBkQFiAf8B8wHM
+        Ab0B/wG8AVABMAH/AbQBOAESAf8BvAFeAUIB/wNdAdPEAAGyAYsBXwH/Ae0B4wHdAf8BmwGeAYIB/wGl
+        Ad8BsAH/AdAB7gHWAf8BpQHeAbAB/wFrAaIBhgH/AckBsgGqAf8B5AGAAUMB/wHvAY0BUgH/AfoB7wHo
+        Af8B5QGAAUUB/wHNAVkBMQH/AcQBrAGjAf8DSAGFxAABuAGSAWgC/wH8AfsB/wHtAeMB3QH/AZsBggFd
+        Af8BpgHeAbAB/wGxAeIBugH/AVQBSwE4Af8BlgGMAYcB/wHJAbIBqwH/AegBngFqAf8B8gGjAYMB/wHj
+        AZABWgH/AcYBrgGmAf8BgQFbAVIB/wMOARPEAAG9AZoBhAL/AfwB+wL/AfwB+wH/AekB3gHYAf8BmwGC
+        AV0B/wGbAYIBXQH/Ae4B1gHJAf8B8gHWAcgB/wG7AagBnwH/AaQBmgGWAf8BmgGVAZQB/wGkAZgBkwH/
+        AZ8BjgGGAf8BZwEsAQ0B/8gAAcIBoAGLAv8B/AH7Av8B/AH7Av8B/AH7Av8B+AH1Af8B/gHzAe0B/wH+
+        Ae0B5AH/AdQBxQHSAf8BDAE/AcsB/wELAT0BxgH/AdEBsQGvAf8B/AHKAbAB/wHKAacBlQH/AWkBLAEL
+        Af/IAAHGAaYBkgL/AfwB+wL/AfwB+wL/AfwB+wL/AfwB+wL/AfgB9QH/Af4B8wHtAf8BHAFKAdQB/wFe
+        Ab4B+QH/ATABjAHLAf8BCwE9AcYB/wH8AdABuQH/AdIBrQGaAf8BagEuAQ4B/8gAAckBqgGWAv8B/AH7
+        Av8B/AH7Av8B/AH7Av8B/AH7Av8B/AH7Av8B+AH1Af8BHQFMAdcB/wG5AeQC/wFeAb4B+QH/AQwBPwHL
+        Af8B/QHXAcMB/wHZAbMBnwH/AWsBMAEQAf/IAAHJAaoBlgL/AfwB+wL/AfwB+wL/AfwB+wL/AfwB+wL/
+        AfwB+wL/AfwB+wH/AdcB1AHsAf8BHQFMAdcB/wEcAUsB1AH/AdQBxQHSAf8B/QHfAc8B/wHeAbcBowH/
+        AWsBMgESAf/IAAHJAaoBlgL/AfwB+wL/AfwB+wL/AfwB+wL/AfwB+wL/AfwB+wL/AfwB+wL/AfwB+wL/
+        AfgB9QH/Af4B8wHtAf8B/gHtAeQB/wH9AeYB2gH/Af0B3wHPAf8BgAEzARQB/8gAAckBqgGWAf8ByQGq
+        AZYB/wHJAaoBlgH/AckBqgGWAf8BxgGmAZIB/wHCAaABiwH/Ab0BmgGEAf8BuAGSAWgB/wGyAYsBXwH/
+        AawBgwFWAf8BpwFnAU4B/wGiAWEBRwH/AZ4BWwFAAf8BmwFXATwB//8A/wCOAAG6AaEBkgH/Aa0BlwGI
+        Af8BpgGQAYAB/wGfAYgBWQH/AZkBggFSAf8BkwFdAUsB/wGMAVUBRAH/AYYBTgE8Af8BYAFHATQB/wFZ
+        AUABLQH/AVMBOQElAf8BTQEzAR4B/wFIAS0BGQH/AUUBKgEUAf9EAAGbAToBHwH/AYABFgEAAf8BTgEV
+        AQAB/wFOARMBAAH/AU0BEQEAAf8BTAEPAQAB/wFLAQwBAAH/AUoBCgEAAf8BSQEHAQAB/wFIAQQBAAH/
+        AUcBAgEAAf8BRgIAAf8BRgIAAf8BRQIAAf9MAAG9AaYBmAH/AQAD/wEAA/8BAAP/AQAD/wEAA/8BAAP/
+        AQAD/wEAA/8BAAP/AQAD/wEAA/8BAAP/AUsBMQEcAf8EAANiAe8BmQGoAawB/wGZAagBrAH/AZkBqAGs
         Af8BmQGoAawB/wGZAagBrAH/AZkBqAGsAf8BmQGoAawB/wGZAagBrAH/AZkBqAGsAf8BmQGoAawB/wGZ
-        AagBrAH/AZkBqAGsAf8DXAHPDAABngFBASYB/wGLAdABmAH/AYkB0QGYAf8BSAHFAYgB/wExAbcBRgH/
-        ARsBqQE1Af8BBgGcASMB/wEAAY8BEwH/AQABiAEJAf8BAAGIAQkB/wEAAYgBCQH/AQABSwEIAf8BHwEM
-        AQAB/wFJAQEBAAH/CAADKgFAAZwBmwGRAf8BnAGbAZEB/wGcAZsBkQH/AZwBmwGRAf8BnAGbAZEB/wGc
-        AZsBkQH/AZwBmwGRAf8BnAGbAZEB/wGcAZsBkQH/AZwBmwGRAf8BnAGbAZEB/wGcAZsBkQH/A0cBgAwA
-        AcIBqgGdAf8BAAP/Af0BkgFCAf8B7QGHATgB/wHZAV4BMQH/AccBUwEoAf8BswFGAR4B/wGmATwBFwH/
-        AQAD/wH9AZIBQgH/Ae0BhwE4Af8B2QFeATEB/wEAA/8BVwE+ASkB/wQAA2IB7wHyAfQB9Qn/A90B/wPO
-        Af8DzgH/A+cN/wHmAekB6gH/A1wBzwwAAaIBRwEtAf8BugHmAcIB/wGnAeABsgH/AZIB1wGfAf8BTwHJ
-        AY4B/wE3AboBTAH/ASABrAE4Af8BBwGcASMB/wEAAY4BEgH/AQABiAEJAf8BFQErAQcB/wFAASsBHAH/
-        ATUBIAERAf8BSQEDAQAB/wgAAyoBQAHNAcwBxwH/Af4C/AH/Af4C/AH/Af4C/AH/Af4C/AH/Af4C/AH/
-        Af4C/AH/Af4C/AH/Af4C/AH/Af4C/AH/Af4C/AH/AeYB5AHhAf8DRwGADAABxQGuAaMB/wEAA/8BAAP/
-        AwAB/wMAAf8DAAH/AQAD/wEAA/8BAAP/AQAD/wEAA/8BAAP/AQAD/wFiAUkBNQH/BAADYgHvAfIB9AH1
-        Bf8B2gHRAckB/wGhAY0BTwH/AQcCAAH/ASQBHwEaAf8BhQFFATcB/wFEASoBFgH/AaMBkgGFBf8B5gHp
-        AeoB/wNcAc8MAAGnAU0BNAH/AaQB3gGvAf8B0QHvAdYB/wGnAeABsgH/AY0B1AGbAf8BSQHFAYkB/wEx
-        AbYBRwH/ARoBqAEzAf8BAAGVARwB/wEhARsBBQH/AZIBTgFBAf8BjQFKATwB/wMAAf8BSgEFAQAB/wgA
-        AyoBQAHNAcwBxwH/AfMC9gH/Ae8B8wH0Af8B7wH0AfUB/wHvAfQB9QH/Ae8B8wH1Af8B8AL0Af8B8AH0
-        AfUB/wHvAfQB9QH/Ae8C9AH/Ae8B8wH1Af8B5gHkAeEB/wNHAYAMAAHJAbQBqAH/AcQBrQGhAf8BwAGo
-        AZsB/wMABf8DAAH/Aa0BlQGEAf8BqQGQAWMB/wGkAYsBXQH/AZ8BhAFXAf8BmgFjAVEB/wGWAV8BTQH/
-        AZUBXgFLAf8BlQFeAUsB/wQAA2IC7wLwBf8BqgGYAYkB/wHbAdQBzgH/AzIB/wNGAf8D5w3/AeYB6QHq
-        Af8DXAHPDAABrAGDATwB/wGbAaQBhQH/AacB4AGyAf8B0QHvAdYB/wGnAeABsgH/AYkB0QGYAf8BQwHB
-        AYQB/wEnAbABPgH/ATMBQAEkAf8BvwGrAaEB/wGzAZ0BkAH/AwAB/wGuAZEBgwH/AUsBBwEAAf8IAAMq
-        AUABzQHMAccB/wH0AfcB+AH/AfEB9AH1Af8B8QL1Af8B8QL1Af8B8QH0AfUB/wHxAfUB9gH/AfEC9QH/
-        AfEB9QH2Af8B8QH0AfUB/wHxAfUB9gH/AeYB5AHhAf8DRwGAFwAF/wMAAf8oAANiAe8BxgHDAcEB/wPO
-        Af8BnQGLAU8B/wHbAdQBzgH/AzIB/wEkAR8BGgH/AYUBRQE3Af8BRAEqARYB/wGjAZIBhQX/AeYB6QHq
-        Af8DXAHPDAABsgGLAUUB/wHtAeMB3QH/AZsBngGCAf8BpQHfAbAB/wHQAe4B1gH/AaUB3gGwAf8BUQHL
-        AY8B/wE6AUoBLAH/Ac8BvAGyAf8B0wHBAbcB/wMAAf8B7AG2AZkB/wG0AZYBhwH/AUwBCgEAAf8IAAMq
-        AUABzQHMAccB/wH2AfcB+AH/AfMB9gH3Af8B8wH2AfcB/wHzAfYB9wH/AfMB9gH3Af8B8wH1AfYB/wHz
-        AfYB9wH/AfQB9gH3Af8B8wL2Af8B8wH2AfcB/wHmAeQB4QH/A0cBgAsAAf8LAAX/AwAB/ygAA2IB7wMA
-        Af8DAAH/A78B/wMiAf8DgQH/A84B/wPnDf8B5gHpAeoB/wNcAc8MAAG4AZIBTgL/AfwB+wH/Ae0B4wHd
-        Af8BmwGCAUMB/wGmAd4BsAH/AbEB4gG6Af8BOgEwARwB/wHOAa4BmwH/ATcBIQERAf8BNwEhAREB/wHY
-        AbABmQH/AfsBwQGiAf8BuwGbAYwB/wFNAQ0BAAH/CAADKgFAAc0BzAHHAf8B9wH4AfkB/wH2AvcB/wH1
-        AvcB/wH1AfcB+AH/AfYB9wH4Af8B9QL3Af8B9QH2AfgB/wH1AfcB+AH/AfUB9wH4Af8B9QL3Af8B5gHk
-        AeEB/wNHAYALAAH/AwAB/wMABf8DAAH/LAADYgHvAfEB7gHrCf8DIgH/AwAB/wMAAf8BKgEjAR0B/wGR
-        AVABQAH/AaMBkgGFBf8B5gHpAeoB/wNcAc8MAAG9AZoBhAL/AfwB+wL/AfwB+wH/AekB3gHYAf8BmwGC
-        AUMB/wGbAYIBQwH/Ae4B1gHJAf8B/QHfAc8B/wH9AdcBwwH/AfwB0AG5Af8B/AHKAbAB/wH7AcUBqAH/
-        AcIBoQGQAf8BTgEPAQAB/wgAAyoBQAHNAcwBxwH/AvkB+gH/AfcB+AH5Af8B9gH4AfkB/wH3AfgB+QH/
-        AfcB+AH5Af8B9wL4Af8B9wH4AfkB/wH3AfgB+QH/AfcB+AH5Af8B9wH4AfkB/wHmAeQB4QH/A0cBgAsA
-        Df8DAAH/AwAB/wMAAf8kAANiAe8B8QHuAesN/wMyAf8DjxH/AeYB6QHqAf8DXAHPDAABwgGgAYsC/wH8
-        AfsC/wH8AfsC/wH8AfsC/wH4AfUB/wH+AfMB7QH/Af4B7QHkAf8B1AHFAdIB/wEAASUBywH/AQABIwHG
-        Af8B0QGxAa8B/wH8AcoBsAH/AcoBpwGVAf8BTwESAQAB/wgAAyoBQAHNAcwBxwH/AfoB+wH6Af8B+QH6
-        AfkB/wP5Af8B+QL6Af8C+QH6Af8C+QH6Af8B+AL5Af8B+QL6Af8D+QH/AfgB+QH6Af8B5gHkAeEB/wNH
-        AYALABH/AwAB/ygAA2IB7wHxAe4B6wn/AyIB/wFJAUEBOgH/AZ0BigFNAf8BTwE3ASMB/wFEASkBFQH/
-        AaMBkgGFBf8B5gHpAeoB/wNcAc8MAAHGAaYBkgL/AfwB+wL/AfwB+wL/AfwB+wL/AfwB+wL/AfgB9QH/
-        Af4B8wHtAf8BAgEwAdQB/wFEAb4B+QH/ARYBjAHLAf8BAAEjAcYB/wH8AdABuQH/AdIBrQGaAf8BUAEU
-        AQAB/wgAAyoBQAHNAcwBxwH/AfwC+wH/AfsB+gH7Af8D+wH/Af0B+wH8Af8B/gL8Af8B/gL8Af8B/gL8
-        Af8B/gL8Af8B/gL8Af8B/gL8Af8B5gHkAeEB/wNHAYALAA3/AwAB/ywAA2IB7wHxAe4B6wX/AxIB/wOv
-        Gf8B5gHpAeoB/wNcAc8MAAHJAaoBlgL/AfwB+wL/AfwB+wL/AfwB+wL/AfwB+wL/AfwB+wL/AfgB9QH/
-        AQMBMgHXAf8BuQHkAv8BRAG+AfkB/wEAASUBywH/Af0B1wHDAf8B2QGzAZ8B/wFRARYBAAH/CAADKgFA
-        Ac0BzAHHAf8B/QH8AfsB/wL8AfsB/wH9AvwB/wH+AvwB/wG1AbMBrAH/AZwBmwGRAf8BnAGbAZEB/wGc
-        AZsBkQH/AZwBmwGRAf8BnAGbAZEB/wNZAb8PAAn/AwAB/zAAA2IB7wHxAe4B6wH/AwIB/wGbAZEBigH/
-        Aa0BmQGLAf8BlgFRAT8B/wGKAUQBMgH/AU8BNgEkAf8BQwEpARYB/wGjAZIBhQX/AeYB6QHqAf8DXAHP
-        DAAByQGqAZYC/wH8AfsC/wH8AfsC/wH8AfsC/wH8AfsC/wH8AfsC/wH8AfsB/wHXAdQB7AH/AQMBMgHX
-        Af8BAgExAdQB/wHUAcUB0gH/Af0B3wHPAf8B3gG3AaMB/wFRARgBAAH/CAADKgFAAaYBwAHFAf8BrwHk
-        AfkB/wGvAeQB+QH/Aa8B5AH5Af8BrwHkAfkB/wGhAa0BqwH/AfYB9wH4Af8B9gH3AfgB/wH2AvgB/wH2
-        AfcB+AH/AfYB9wH4Af8DWQG/DwAF/wMAAf80AANiAe8DAAH/A88h/wHmAekB6gH/A1wBzwwAAckBqgGW
-        Av8B/AH7Av8B/AH7Av8B/AH7Av8B/AH7Av8B/AH7Av8B/AH7Av8B/AH7Av8B+AH1Af8B/gHzAe0B/wH+
-        Ae0B5AH/Af0B5gHaAf8B/QHfAc8B/wGAARkBAAH/CAADKgFAAYIBtwHHAf8BOQHSAfwB/wE5AdIB/AH/
-        ATkB0gH8Af8BOQHSAfwB/wGPAakBrAH/AbQBpwGRAf8BtAGnAZEB/wG0AacBkQH/AbQBpwGRAf8BtAGn
-        AZEB/xMAAf8DAAH/OAADYgHvAZgBogGjAf8BmQGoAawB/wGZAagBrAH/AZkBqAGsAf8BmQGoAawB/wGZ
-        AagBrAH/AZkBqAGsAf8BmQGoAawB/wGZAagBrAH/AZkBqAGsAf8BmQGoAawB/wNcAc8MAAHJAaoBlgH/
-        AckBqgGWAf8ByQGqAZYB/wHJAaoBlgH/AcYBpgGSAf8BwgGgAYsB/wG9AZoBhAH/AbgBkgFOAf8BsgGL
-        AUUB/wGsAYMBPAH/AacBTQE0Af8BogFHAS0B/wGeAUEBJgH/AZsBPQEiAf8MAANHAYABnAGbAZEB/wGc
-        AZsBkQH/AZwBmwGRAf8BnAGbAZEB/wMqAUAnAAH//wA5AAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEB
-        AQABAQYAAQEWAAP/AQAB/wEBBgABgAcAAYAHAAGABwABgAcAAYAHAAGABwABgAcAAYABAQYAAYABAQYA
-        AYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAv8GAAb/AcABAAL/AYABAQL/AcABAAGAAQMBgAEB
-        AYABAQHAAQABgAEDAYABAQGAAQEBwAEAAYABAwGAAQEBgAEBAcABAAGAAQMBgAEBAYABAQHxAf8BgAED
-        AYABAQGAAQEBsQH/AYABAwGAAQEBgAEBAYMB/wGAAQMBgAEBAYABAQGAAf8BgAEDAYABAQGAAQEBgQH/
-        AYABAwGAAQEBgAEBAYMB/wGAAQMBgAEBAYABAwGHAf8BgAEDAYABAQGAAQMBjwH/AYABAwGAAQEBgAEH
-        AZ8B/wGAAQMBgAEBAcAB/wG/Cf8L
+        AagBrAH/A1wBzwwAAZ4BPgEjAf8BiwHQAZgB/wGJAdEBmAH/AUUBxQGIAf8BLgG3AUMB/wEYAakBMgH/
+        AQMBnAEgAf8BAAGPARAB/wEAAYgBBgH/AQABiAEGAf8BAAGIAQYB/wEAAUgBBQH/ARwBCQEAAf8BRgIA
+        Af8IAAMqAUABnAGbAZEB/wGcAZsBkQH/AZwBmwGRAf8BnAGbAZEB/wGcAZsBkQH/AZwBmwGRAf8BnAGb
+        AZEB/wGcAZsBkQH/AZwBmwGRAf8BnAGbAZEB/wGcAZsBkQH/AZwBmwGRAf8DRwGADAABwgGqAZ0B/wEA
+        A/8B/QGSAT8B/wHtAYcBNQH/AdkBWwEuAf8BxwFQASUB/wGzAUMBGwH/AaYBOQEUAf8BAAP/Af0BkgE/
+        Af8B7QGHATUB/wHZAVsBLgH/AQAD/wFUATsBJgH/BAADYgHvAfIB9AH1Cf8D3QH/A84B/wPOAf8D5w3/
+        AeYB6QHqAf8DXAHPDAABogFEASoB/wG6AeYBwgH/AacB4AGyAf8BkgHXAZ8B/wFMAckBjgH/ATQBugFJ
+        Af8BHQGsATUB/wEEAZwBIAH/AQABjgEPAf8BAAGIAQYB/wESASgBBAH/AT0BKAEZAf8BMgEdAQ4B/wFG
+        AgAB/wgAAyoBQAHNAcwBxwH/Af4C/AH/Af4C/AH/Af4C/AH/Af4C/AH/Af4C/AH/Af4C/AH/Af4C/AH/
+        Af4C/AH/Af4C/AH/Af4C/AH/AeYB5AHhAf8DRwGADAABxQGuAaMB/wEAA/8BAAP/AwAB/wMAAf8DAAH/
+        AQAD/wEAA/8BAAP/AQAD/wEAA/8BAAP/AQAD/wFfAUYBMgH/BAADYgHvAfIB9AH1Bf8B2gHRAckB/wGh
+        AY0BTAH/AQQCAAH/ASEBHAEXAf8BhQFCATQB/wFBAScBEwH/AaMBkgGFBf8B5gHpAeoB/wNcAc8MAAGn
+        AUoBMQH/AaQB3gGvAf8B0QHvAdYB/wGnAeABsgH/AY0B1AGbAf8BRgHFAYkB/wEuAbYBRAH/ARcBqAEw
+        Af8BAAGVARkB/wEeARgBAgH/AZIBSwE+Af8BjQFHATkB/wMAAf8BRwECAQAB/wgAAyoBQAHNAcwBxwH/
+        AfMC9gH/Ae8B8wH0Af8B7wH0AfUB/wHvAfQB9QH/Ae8B8wH1Af8B8AL0Af8B8AH0AfUB/wHvAfQB9QH/
+        Ae8C9AH/Ae8B8wH1Af8B5gHkAeEB/wNHAYAMAAHJAbQBqAH/AcQBrQGhAf8BwAGoAZsB/wMABf8DAAH/
+        Aa0BlQGEAf8BqQGQAWAB/wGkAYsBWgH/AZ8BhAFUAf8BmgFgAU4B/wGWAVwBSgH/AZUBWwFIAf8BlQFb
+        AUgB/wQAA2IC7wLwBf8BqgGYAYkB/wHbAdQBzgH/Ay8B/wNDAf8D5w3/AeYB6QHqAf8DXAHPDAABrAGD
+        ATkB/wGbAaQBhQH/AacB4AGyAf8B0QHvAdYB/wGnAeABsgH/AYkB0QGYAf8BQAHBAYQB/wEkAbABOwH/
+        ATABPQEhAf8BvwGrAaEB/wGzAZ0BkAH/AwAB/wGuAZEBgwH/AUgBBAEAAf8IAAMqAUABzQHMAccB/wH0
+        AfcB+AH/AfEB9AH1Af8B8QL1Af8B8QL1Af8B8QH0AfUB/wHxAfUB9gH/AfEC9QH/AfEB9QH2Af8B8QH0
+        AfUB/wHxAfUB9gH/AeYB5AHhAf8DRwGAFwAF/wMAAf8oAANiAe8BxgHDAcEB/wPOAf8BnQGLAUwB/wHb
+        AdQBzgH/Ay8B/wEhARwBFwH/AYUBQgE0Af8BQQEnARMB/wGjAZIBhQX/AeYB6QHqAf8DXAHPDAABsgGL
+        AUIB/wHtAeMB3QH/AZsBngGCAf8BpQHfAbAB/wHQAe4B1gH/AaUB3gGwAf8BTgHLAY8B/wE3AUcBKQH/
+        Ac8BvAGyAf8B0wHBAbcB/wMAAf8B7AG2AZkB/wG0AZYBhwH/AUkBBwEAAf8IAAMqAUABzQHMAccB/wH2
+        AfcB+AH/AfMB9gH3Af8B8wH2AfcB/wHzAfYB9wH/AfMB9gH3Af8B8wH1AfYB/wHzAfYB9wH/AfQB9gH3
+        Af8B8wL2Af8B8wH2AfcB/wHmAeQB4QH/A0cBgAsAAf8LAAX/AwAB/ygAA2IB7wMAAf8DAAH/A78B/wMf
+        Af8DgQH/A84B/wPnDf8B5gHpAeoB/wNcAc8MAAG4AZIBSwL/AfwB+wH/Ae0B4wHdAf8BmwGCAUAB/wGm
+        Ad4BsAH/AbEB4gG6Af8BNwEtARkB/wHOAa4BmwH/ATQBHgEOAf8BNAEeAQ4B/wHYAbABmQH/AfsBwQGi
+        Af8BuwGbAYwB/wFKAQoBAAH/CAADKgFAAc0BzAHHAf8B9wH4AfkB/wH2AvcB/wH1AvcB/wH1AfcB+AH/
+        AfYB9wH4Af8B9QL3Af8B9QH2AfgB/wH1AfcB+AH/AfUB9wH4Af8B9QL3Af8B5gHkAeEB/wNHAYALAAH/
+        AwAB/wMABf8DAAH/LAADYgHvAfEB7gHrCf8DHwH/AwAB/wMAAf8BJwEgARoB/wGRAU0BPQH/AaMBkgGF
+        Bf8B5gHpAeoB/wNcAc8MAAG9AZoBhAL/AfwB+wL/AfwB+wH/AekB3gHYAf8BmwGCAUAB/wGbAYIBQAH/
+        Ae4B1gHJAf8B/QHfAc8B/wH9AdcBwwH/AfwB0AG5Af8B/AHKAbAB/wH7AcUBqAH/AcIBoQGQAf8BSwEM
+        AQAB/wgAAyoBQAHNAcwBxwH/AvkB+gH/AfcB+AH5Af8B9gH4AfkB/wH3AfgB+QH/AfcB+AH5Af8B9wL4
+        Af8B9wH4AfkB/wH3AfgB+QH/AfcB+AH5Af8B9wH4AfkB/wHmAeQB4QH/A0cBgAsADf8DAAH/AwAB/wMA
+        Af8kAANiAe8B8QHuAesN/wMvAf8DjxH/AeYB6QHqAf8DXAHPDAABwgGgAYsC/wH8AfsC/wH8AfsC/wH8
+        AfsC/wH4AfUB/wH+AfMB7QH/Af4B7QHkAf8B1AHFAdIB/wEAASIBywH/AQABIAHGAf8B0QGxAa8B/wH8
+        AcoBsAH/AcoBpwGVAf8BTAEPAQAB/wgAAyoBQAHNAcwBxwH/AfoB+wH6Af8B+QH6AfkB/wP5Af8B+QL6
+        Af8C+QH6Af8C+QH6Af8B+AL5Af8B+QL6Af8D+QH/AfgB+QH6Af8B5gHkAeEB/wNHAYALABH/AwAB/ygA
+        A2IB7wHxAe4B6wn/Ax8B/wFGAT4BNwH/AZ0BigFKAf8BTAE0ASAB/wFBASYBEgH/AaMBkgGFBf8B5gHp
+        AeoB/wNcAc8MAAHGAaYBkgL/AfwB+wL/AfwB+wL/AfwB+wL/AfwB+wL/AfgB9QH/Af4B8wHtAf8BAAEt
+        AdQB/wFBAb4B+QH/ARMBjAHLAf8BAAEgAcYB/wH8AdABuQH/AdIBrQGaAf8BTQERAQAB/wgAAyoBQAHN
+        AcwBxwH/AfwC+wH/AfsB+gH7Af8D+wH/Af0B+wH8Af8B/gL8Af8B/gL8Af8B/gL8Af8B/gL8Af8B/gL8
+        Af8B/gL8Af8B5gHkAeEB/wNHAYALAA3/AwAB/ywAA2IB7wHxAe4B6wX/Aw8B/wOvGf8B5gHpAeoB/wNc
+        Ac8MAAHJAaoBlgL/AfwB+wL/AfwB+wL/AfwB+wL/AfwB+wL/AfwB+wL/AfgB9QH/AQABLwHXAf8BuQHk
+        Av8BQQG+AfkB/wEAASIBywH/Af0B1wHDAf8B2QGzAZ8B/wFOARMBAAH/CAADKgFAAc0BzAHHAf8B/QH8
+        AfsB/wL8AfsB/wH9AvwB/wH+AvwB/wG1AbMBrAH/AZwBmwGRAf8BnAGbAZEB/wGcAZsBkQH/AZwBmwGR
+        Af8BnAGbAZEB/wNZAb8PAAn/AwAB/zAAA2IB7wHxAe4B6wH/AwAB/wGbAZEBigH/Aa0BmQGLAf8BlgFO
+        ATwB/wGKAUEBLwH/AUwBMwEhAf8BQAEmARMB/wGjAZIBhQX/AeYB6QHqAf8DXAHPDAAByQGqAZYC/wH8
+        AfsC/wH8AfsC/wH8AfsC/wH8AfsC/wH8AfsC/wH8AfsB/wHXAdQB7AH/AQABLwHXAf8BAAEuAdQB/wHU
+        AcUB0gH/Af0B3wHPAf8B3gG3AaMB/wFOARUBAAH/CAADKgFAAaYBwAHFAf8BrwHkAfkB/wGvAeQB+QH/
+        Aa8B5AH5Af8BrwHkAfkB/wGhAa0BqwH/AfYB9wH4Af8B9gH3AfgB/wH2AvgB/wH2AfcB+AH/AfYB9wH4
+        Af8DWQG/DwAF/wMAAf80AANiAe8DAAH/A88h/wHmAekB6gH/A1wBzwwAAckBqgGWAv8B/AH7Av8B/AH7
+        Av8B/AH7Av8B/AH7Av8B/AH7Av8B/AH7Av8B/AH7Av8B+AH1Af8B/gHzAe0B/wH+Ae0B5AH/Af0B5gHa
+        Af8B/QHfAc8B/wGAARYBAAH/CAADKgFAAYIBtwHHAf8BNgHSAfwB/wE2AdIB/AH/ATYB0gH8Af8BNgHS
+        AfwB/wGPAakBrAH/AbQBpwGRAf8BtAGnAZEB/wG0AacBkQH/AbQBpwGRAf8BtAGnAZEB/xMAAf8DAAH/
+        OAADYgHvAZgBogGjAf8BmQGoAawB/wGZAagBrAH/AZkBqAGsAf8BmQGoAawB/wGZAagBrAH/AZkBqAGs
+        Af8BmQGoAawB/wGZAagBrAH/AZkBqAGsAf8BmQGoAawB/wNcAc8MAAHJAaoBlgH/AckBqgGWAf8ByQGq
+        AZYB/wHJAaoBlgH/AcYBpgGSAf8BwgGgAYsB/wG9AZoBhAH/AbgBkgFLAf8BsgGLAUIB/wGsAYMBOQH/
+        AacBSgExAf8BogFEASoB/wGeAT4BIwH/AZsBOgEfAf8MAANHAYABnAGbAZEB/wGcAZsBkQH/AZwBmwGR
+        Af8BnAGbAZEB/wMqAUAnAAH//wA5AAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/
+        AQAB/wEBBgABgAcAAYAHAAGABwABgAcAAYAHAAGABwABgAcAAYABAQYAAYABAQYAAYABAQYAAYABAQYA
+        AYABAQYAAYABAQYAAYABAQYAAv8GAAb/AcABAAL/AYABAQL/AcABAAGAAQMBgAEBAYABAQHAAQABgAED
+        AYABAQGAAQEBwAEAAYABAwGAAQEBgAEBAcABAAGAAQMBgAEBAYABAQHxAf8BgAEDAYABAQGAAQEBsQH/
+        AYABAwGAAQEBgAEBAYMB/wGAAQMBgAEBAYABAQGAAf8BgAEDAYABAQGAAQEBgQH/AYABAwGAAQEBgAEB
+        AYMB/wGAAQMBgAEBAYABAwGHAf8BgAEDAYABAQGAAQMBjwH/AYABAwGAAQEBgAEHAZ8B/wGAAQMBgAEB
+        AcAB/wG/Cf8L
 </value>
   </data>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
