--- a/SharpShell/Tools/ServerManager/ServerManagerForm.resx
+++ b/SharpShell/Tools/ServerManager/ServerManagerForm.resx
@@ -1,64 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<root>
-  <!-- 
-    Microsoft ResX Schema 
-    
-    Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
-    associated with the data types.
-    
-    Example:
-    
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-                
-    There are any number of "resheader" rows that contain simple 
-    name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
-    mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
-    extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
-    read any of the formats listed below.
-    
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-    
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
-
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
+﻿<root>
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -117,33 +57,27 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>443, 17</value>
-  </metadata>
-  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>559, 17</value>
-  </metadata>
   <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACs
-        FwAAAk1TRnQBSQFMAgEBBQEAAaABAQGgAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIDIAAw4BEwNIAYUDXQHTA2IB9gNdAdMDSAGGAw8BFMgAAZsBVAE5Af8BgAEw
+        FwAAAk1TRnQBSQFMAgEBBQEAAcgBAQHIAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIDIAAw8BEwNJAYUDXgHTA2IB9gNeAdMDSQGGAw8BFMgAAZsBVAE5Af8BgAEw
         AREB/wFoAS8BDwH/AWgBLQENAf8BZwErAQsB/wFmASkBCAH/AWQBKQEKAf8BgQFYAU8B/wHBAaYBnwH/
         AcQBXQFHAf8BoQFDASwB/wGuAVYBQgH/AcMBpQGfAf8BgAFVAUsB/wMPARTEAAGeAVgBPQH/AYsB0AGY
         Af8BiQHRAZgB/wFfAcUBiAH/AUgBtwFdAf8BMgGpAUwB/wFEAYwBUQH/AcEBqQGhAf8BsgExAQ4B/wHL
-        AYsBXgH/AfgC9wH/AbABSwE2Af8BvwEtAQ8B/wHCAaUBnwH/A0gBhsQAAaIBXgFEAf8BugHmAcIB/wGn
+        AYsBXgH/AfgC9wH/AbABSwE2Af8BvwEtAQ8B/wHCAaUBnwH/A0kBhsQAAaIBXgFEAf8BugHmAcIB/wGn
         AeABsgH/AZIB1wGfAf8BZgHJAY4B/wFOAboBYwH/AYYBlAGHAf8ByAFlAUgB/wGwAS8BCQH/AcsBiwFf
-        Af8B5wHoAekB/wGwAVIBPgH/AbcBKAEGAf8BvQFTAToB/wNdAdPEAAGnAWQBSwH/AaQB3gGvAf8B0QHv
+        Af8B5wHoAekB/wGwAVIBPgH/AbcBKAEGAf8BvQFTAToB/wNeAdPEAAGnAWQBSwH/AaQB3gGvAf8B0QHv
         AdYB/wGnAeABsgH/AY0B1AGbAf8BYAHFAYkB/wKVAZIB/wHNAVYBMQH/AckBSwEkAf8BzwGRAWQB/wHo
         AekB6gH/AbIBWQFDAf8BsAEpAQQB/wGuATIBEAH/A2IB9sQAAawBgwFTAf8BmwGkAYUB/wGnAeABsgH/
         AdEB7wHWAf8BpwHgAbIB/wGJAdEBmAH/AYwBlwGNAf8B1gGPAVsB/wHWAVoBMQH/AdoBkQFfAf8B8wHM
-        Ab0B/wG8AU0BLQH/AbQBNQEPAf8BvAFbAT8B/wNdAdPEAAGyAYsBXAH/Ae0B4wHdAf8BmwGeAYIB/wGl
+        Ab0B/wG8AU0BLQH/AbQBNQEPAf8BvAFbAT8B/wNeAdPEAAGyAYsBXAH/Ae0B4wHdAf8BmwGeAYIB/wGl
         Ad8BsAH/AdAB7gHWAf8BpQHeAbAB/wFoAaIBhgH/AckBsgGqAf8B5AGAAUAB/wHvAY0BTwH/AfoB7wHo
-        Af8B5QGAAUIB/wHNAVYBLgH/AcQBrAGjAf8DSAGFxAABuAGSAWUC/wH8AfsB/wHtAeMB3QH/AZsBggFa
+        Af8B5QGAAUIB/wHNAVYBLgH/AcQBrAGjAf8DSQGFxAABuAGSAWUC/wH8AfsB/wHtAeMB3QH/AZsBggFa
         Af8BpgHeAbAB/wGxAeIBugH/AVEBSAE1Af8BlgGMAYcB/wHJAbIBqwH/AegBngFnAf8B8gGjAYMB/wHj
-        AZABVwH/AcYBrgGmAf8BgQFYAU8B/wMOARPEAAG9AZoBhAL/AfwB+wL/AfwB+wH/AekB3gHYAf8BmwGC
+        AZABVwH/AcYBrgGmAf8BgQFYAU8B/wMPARPEAAG9AZoBhAL/AfwB+wL/AfwB+wH/AekB3gHYAf8BmwGC
         AVoB/wGbAYIBWgH/Ae4B1gHJAf8B8gHWAcgB/wG7AagBnwH/AaQBmgGWAf8BmgGVAZQB/wGkAZgBkwH/
         AZ8BjgGGAf8BZAEpAQoB/8gAAcIBoAGLAv8B/AH7Av8B/AH7Av8B/AH7Av8B+AH1Af8B/gHzAe0B/wH+
         Ae0B5AH/AdQBxQHSAf8BCQE8AcsB/wEIAToBxgH/AdEBsQGvAf8B/AHKAbAB/wHKAacBlQH/AWYBKQEI
@@ -162,65 +96,65 @@
         AUQCAAH/AUMCAAH/AUMCAAH/AUICAAH/TAABvQGmAZgB/wEAA/8BAAP/AQAD/wEAA/8BAAP/AQAD/wEA
         A/8BAAP/AQAD/wEAA/8BAAP/AQAD/wFIAS4BGQH/BAADYgHvAZkBqAGsAf8BmQGoAawB/wGZAagBrAH/
         AZkBqAGsAf8BmQGoAawB/wGZAagBrAH/AZkBqAGsAf8BmQGoAawB/wGZAagBrAH/AZkBqAGsAf8BmQGo
-        AawB/wNcAc8MAAGeATsBIAH/AYsB0AGYAf8BiQHRAZgB/wFCAcUBiAH/ASsBtwFAAf8BFQGpAS8B/wEA
+        AawB/wNdAc8MAAGeATsBIAH/AYsB0AGYAf8BiQHRAZgB/wFCAcUBiAH/ASsBtwFAAf8BFQGpAS8B/wEA
         AZwBHQH/AQABjwENAf8BAAGIAQMB/wEAAYgBAwH/AQABiAEDAf8BAAFFAQIB/wEZAQYBAAH/AUMCAAH/
         CAADKgFAAZwBmwGRAf8BnAGbAZEB/wGcAZsBkQH/AZwBmwGRAf8BnAGbAZEB/wGcAZsBkQH/AZwBmwGR
         Af8BnAGbAZEB/wGcAZsBkQH/AZwBmwGRAf8BnAGbAZEB/wGcAZsBkQH/A0cBgAwAAcIBqgGdAf8BAAP/
         Af0BkgE8Af8B7QGHATIB/wHZAVgBKwH/AccBTQEiAf8BswFAARgB/wGmATYBEQH/AQAD/wH9AZIBPAH/
         Ae0BhwEyAf8B2QFYASsB/wEAA/8BUQE4ASMB/wQAA2IB7wHyAfQB9Qn/A90B/wPOAf8DzgH/A+cN/wHm
-        AekB6gH/A1wBzwwAAaIBQQEnAf8BugHmAcIB/wGnAeABsgH/AZIB1wGfAf8BSQHJAY4B/wExAboBRgH/
+        AekB6gH/A10BzwwAAaIBQQEnAf8BugHmAcIB/wGnAeABsgH/AZIB1wGfAf8BSQHJAY4B/wExAboBRgH/
         ARoBrAEyAf8BAQGcAR0B/wEAAY4BDAH/AQABiAEDAf8BDwElAQEB/wE6ASUBFgH/AS8BGgELAf8BQwIA
         Af8IAAMqAUABzQHMAccB/wH+AvwB/wH+AvwB/wH+AvwB/wH+AvwB/wH+AvwB/wH+AvwB/wH+AvwB/wH+
         AvwB/wH+AvwB/wH+AvwB/wHmAeQB4QH/A0cBgAwAAcUBrgGjAf8BAAP/AQAD/wMAAf8DAAH/AwAB/wEA
         A/8BAAP/AQAD/wEAA/8BAAP/AQAD/wEAA/8BXAFDAS8B/wQAA2IB7wHyAfQB9QX/AdoB0QHJAf8BoQGN
-        AUkB/wEBAgAB/wEeARkBFAH/AYUBPwExAf8BPgEkARAB/wGjAZIBhQX/AeYB6QHqAf8DXAHPDAABpwFH
+        AUkB/wEBAgAB/wEeARkBFAH/AYUBPwExAf8BPgEkARAB/wGjAZIBhQX/AeYB6QHqAf8DXQHPDAABpwFH
         AS4B/wGkAd4BrwH/AdEB7wHWAf8BpwHgAbIB/wGNAdQBmwH/AUMBxQGJAf8BKwG2AUEB/wEUAagBLQH/
         AQABlQEWAf8BGwEVAQAB/wGSAUgBOwH/AY0BRAE2Af8DAAH/AUQCAAH/CAADKgFAAc0BzAHHAf8B8wL2
         Af8B7wHzAfQB/wHvAfQB9QH/Ae8B9AH1Af8B7wHzAfUB/wHwAvQB/wHwAfQB9QH/Ae8B9AH1Af8B7wL0
         Af8B7wHzAfUB/wHmAeQB4QH/A0cBgAwAAckBtAGoAf8BxAGtAaEB/wHAAagBmwH/AwAF/wMAAf8BrQGV
         AYQB/wGpAZABXQH/AaQBiwFXAf8BnwGEAVEB/wGaAV0BSwH/AZYBWQFHAf8BlQFYAUUB/wGVAVgBRQH/
-        BAADYgLvAvAF/wGqAZgBiQH/AdsB1AHOAf8DLAH/A0AB/wPnDf8B5gHpAeoB/wNcAc8MAAGsAYMBNgH/
+        BAADYgLvAvAF/wGqAZgBiQH/AdsB1AHOAf8DLAH/A0AB/wPnDf8B5gHpAeoB/wNdAc8MAAGsAYMBNgH/
         AZsBpAGFAf8BpwHgAbIB/wHRAe8B1gH/AacB4AGyAf8BiQHRAZgB/wE9AcEBhAH/ASEBsAE4Af8BLQE6
         AR4B/wG/AasBoQH/AbMBnQGQAf8DAAH/Aa4BkQGDAf8BRQEBAQAB/wgAAyoBQAHNAcwBxwH/AfQB9wH4
         Af8B8QH0AfUB/wHxAvUB/wHxAvUB/wHxAfQB9QH/AfEB9QH2Af8B8QL1Af8B8QH1AfYB/wHxAfQB9QH/
         AfEB9QH2Af8B5gHkAeEB/wNHAYAXAAX/AwAB/ygAA2IB7wHGAcMBwQH/A84B/wGdAYsBSQH/AdsB1AHO
-        Af8DLAH/AR4BGQEUAf8BhQE/ATEB/wE+ASQBEAH/AaMBkgGFBf8B5gHpAeoB/wNcAc8MAAGyAYsBPwH/
+        Af8DLAH/AR4BGQEUAf8BhQE/ATEB/wE+ASQBEAH/AaMBkgGFBf8B5gHpAeoB/wNdAc8MAAGyAYsBPwH/
         Ae0B4wHdAf8BmwGeAYIB/wGlAd8BsAH/AdAB7gHWAf8BpQHeAbAB/wFLAcsBjwH/ATQBRAEmAf8BzwG8
         AbIB/wHTAcEBtwH/AwAB/wHsAbYBmQH/AbQBlgGHAf8BRgEEAQAB/wgAAyoBQAHNAcwBxwH/AfYB9wH4
         Af8B8wH2AfcB/wHzAfYB9wH/AfMB9gH3Af8B8wH2AfcB/wHzAfUB9gH/AfMB9gH3Af8B9AH2AfcB/wHz
         AvYB/wHzAfYB9wH/AeYB5AHhAf8DRwGACwAB/wsABf8DAAH/KAADYgHvAwAB/wMAAf8DvwH/AxwB/wOB
-        Af8DzgH/A+cN/wHmAekB6gH/A1wBzwwAAbgBkgFIAv8B/AH7Af8B7QHjAd0B/wGbAYIBPQH/AaYB3gGw
+        Af8DzgH/A+cN/wHmAekB6gH/A10BzwwAAbgBkgFIAv8B/AH7Af8B7QHjAd0B/wGbAYIBPQH/AaYB3gGw
         Af8BsQHiAboB/wE0ASoBFgH/Ac4BrgGbAf8BMQEbAQsB/wExARsBCwH/AdgBsAGZAf8B+wHBAaIB/wG7
         AZsBjAH/AUcBBwEAAf8IAAMqAUABzQHMAccB/wH3AfgB+QH/AfYC9wH/AfUC9wH/AfUB9wH4Af8B9gH3
         AfgB/wH1AvcB/wH1AfYB+AH/AfUB9wH4Af8B9QH3AfgB/wH1AvcB/wHmAeQB4QH/A0cBgAsAAf8DAAH/
         AwAF/wMAAf8sAANiAe8B8QHuAesJ/wMcAf8DAAH/AwAB/wEkAR0BFwH/AZEBSgE6Af8BowGSAYUF/wHm
-        AekB6gH/A1wBzwwAAb0BmgGEAv8B/AH7Av8B/AH7Af8B6QHeAdgB/wGbAYIBPQH/AZsBggE9Af8B7gHW
+        AekB6gH/A10BzwwAAb0BmgGEAv8B/AH7Av8B/AH7Af8B6QHeAdgB/wGbAYIBPQH/AZsBggE9Af8B7gHW
         AckB/wH9Ad8BzwH/Af0B1wHDAf8B/AHQAbkB/wH8AcoBsAH/AfsBxQGoAf8BwgGhAZAB/wFIAQkBAAH/
         CAADKgFAAc0BzAHHAf8C+QH6Af8B9wH4AfkB/wH2AfgB+QH/AfcB+AH5Af8B9wH4AfkB/wH3AvgB/wH3
         AfgB+QH/AfcB+AH5Af8B9wH4AfkB/wH3AfgB+QH/AeYB5AHhAf8DRwGACwAN/wMAAf8DAAH/AwAB/yQA
-        A2IB7wHxAe4B6w3/AywB/wOPEf8B5gHpAeoB/wNcAc8MAAHCAaABiwL/AfwB+wL/AfwB+wL/AfwB+wL/
+        A2IB7wHxAe4B6w3/AywB/wOPEf8B5gHpAeoB/wNdAc8MAAHCAaABiwL/AfwB+wL/AfwB+wL/AfwB+wL/
         AfgB9QH/Af4B8wHtAf8B/gHtAeQB/wHUAcUB0gH/AQABHwHLAf8BAAEdAcYB/wHRAbEBrwH/AfwBygGw
         Af8BygGnAZUB/wFJAQwBAAH/CAADKgFAAc0BzAHHAf8B+gH7AfoB/wH5AfoB+QH/A/kB/wH5AvoB/wL5
         AfoB/wL5AfoB/wH4AvkB/wH5AvoB/wP5Af8B+AH5AfoB/wHmAeQB4QH/A0cBgAsAEf8DAAH/KAADYgHv
         AfEB7gHrCf8DHAH/AUMBOwE0Af8BnQGKAUcB/wFJATEBHQH/AT4BIwEPAf8BowGSAYUF/wHmAekB6gH/
-        A1wBzwwAAcYBpgGSAv8B/AH7Av8B/AH7Av8B/AH7Av8B/AH7Av8B+AH1Af8B/gHzAe0B/wEAASoB1AH/
+        A10BzwwAAcYBpgGSAv8B/AH7Av8B/AH7Av8B/AH7Av8B/AH7Av8B+AH1Af8B/gHzAe0B/wEAASoB1AH/
         AT4BvgH5Af8BEAGMAcsB/wEAAR0BxgH/AfwB0AG5Af8B0gGtAZoB/wFKAQ4BAAH/CAADKgFAAc0BzAHH
         Af8B/AL7Af8B+wH6AfsB/wP7Af8B/QH7AfwB/wH+AvwB/wH+AvwB/wH+AvwB/wH+AvwB/wH+AvwB/wH+
-        AvwB/wHmAeQB4QH/A0cBgAsADf8DAAH/LAADYgHvAfEB7gHrBf8DDAH/A68Z/wHmAekB6gH/A1wBzwwA
+        AvwB/wHmAeQB4QH/A0cBgAsADf8DAAH/LAADYgHvAfEB7gHrBf8DDAH/A68Z/wHmAekB6gH/A10BzwwA
         AckBqgGWAv8B/AH7Av8B/AH7Av8B/AH7Av8B/AH7Av8B/AH7Av8B+AH1Af8BAAEsAdcB/wG5AeQC/wE+
         Ab4B+QH/AQABHwHLAf8B/QHXAcMB/wHZAbMBnwH/AUsBEAEAAf8IAAMqAUABzQHMAccB/wH9AfwB+wH/
         AvwB+wH/Af0C/AH/Af4C/AH/AbUBswGsAf8BnAGbAZEB/wGcAZsBkQH/AZwBmwGRAf8BnAGbAZEB/wGc
-        AZsBkQH/A1kBvw8ACf8DAAH/MAADYgHvAfEB7gHrAf8DAAH/AZsBkQGKAf8BrQGZAYsB/wGWAUsBOQH/
-        AYoBPgEsAf8BSQEwAR4B/wE9ASMBEAH/AaMBkgGFBf8B5gHpAeoB/wNcAc8MAAHJAaoBlgL/AfwB+wL/
+        AZsBkQH/A1oBvw8ACf8DAAH/MAADYgHvAfEB7gHrAf8DAAH/AZsBkQGKAf8BrQGZAYsB/wGWAUsBOQH/
+        AYoBPgEsAf8BSQEwAR4B/wE9ASMBEAH/AaMBkgGFBf8B5gHpAeoB/wNdAc8MAAHJAaoBlgL/AfwB+wL/
         AfwB+wL/AfwB+wL/AfwB+wL/AfwB+wL/AfwB+wH/AdcB1AHsAf8BAAEsAdcB/wEAASsB1AH/AdQBxQHS
         Af8B/QHfAc8B/wHeAbcBowH/AUsBEgEAAf8IAAMqAUABpgHAAcUB/wGvAeQB+QH/Aa8B5AH5Af8BrwHk
-        AfkB/wGvAeQB+QH/AaEBrQGrAf8B9gH3AfgB/wH2AfcB+AH/AfYC+AH/AfYB9wH4Af8B9gH3AfgB/wNZ
-        Ab8PAAX/AwAB/zQAA2IB7wMAAf8DzyH/AeYB6QHqAf8DXAHPDAAByQGqAZYC/wH8AfsC/wH8AfsC/wH8
+        AfkB/wGvAeQB+QH/AaEBrQGrAf8B9gH3AfgB/wH2AfcB+AH/AfYC+AH/AfYB9wH4Af8B9gH3AfgB/wNa
+        Ab8PAAX/AwAB/zQAA2IB7wMAAf8DzyH/AeYB6QHqAf8DXQHPDAAByQGqAZYC/wH8AfsC/wH8AfsC/wH8
         AfsC/wH8AfsC/wH8AfsC/wH8AfsC/wH8AfsC/wH4AfUB/wH+AfMB7QH/Af4B7QHkAf8B/QHmAdoB/wH9
         Ad8BzwH/AYABEwEAAf8IAAMqAUABggG3AccB/wEzAdIB/AH/ATMB0gH8Af8BMwHSAfwB/wEzAdIB/AH/
         AY8BqQGsAf8BtAGnAZEB/wG0AacBkQH/AbQBpwGRAf8BtAGnAZEB/wG0AacBkQH/EwAB/wMAAf84AANi
         Ae8BmAGiAaMB/wGZAagBrAH/AZkBqAGsAf8BmQGoAawB/wGZAagBrAH/AZkBqAGsAf8BmQGoAawB/wGZ
-        AagBrAH/AZkBqAGsAf8BmQGoAawB/wGZAagBrAH/A1wBzwwAAckBqgGWAf8ByQGqAZYB/wHJAaoBlgH/
+        AagBrAH/AZkBqAGsAf8BmQGoAawB/wGZAagBrAH/A10BzwwAAckBqgGWAf8ByQGqAZYB/wHJAaoBlgH/
         AckBqgGWAf8BxgGmAZIB/wHCAaABiwH/Ab0BmgGEAf8BuAGSAUgB/wGyAYsBPwH/AawBgwE2Af8BpwFH
         AS4B/wGiAUEBJwH/AZ4BOwEgAf8BmwE3ARwB/wwAA0cBgAGcAZsBkQH/AZwBmwGRAf8BnAGbAZEB/wGc
         AZsBkQH/AyoBQCcAAf//ADkAAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/8BAAH/
@@ -232,11 +166,8 @@
         Ab8J/ws=
 </value>
   </data>
-  <metadata name="toolStripMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>669, 17</value>
-  </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="toolStripButtonOpenShellDialog.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
+  <data name="toolStripButtonOpenShellDialog.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
@@ -251,10 +182,7 @@
         TgDQASA1MVpwzwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>328, 17</value>
-  </metadata>
-  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAgAICAQAAEABADoAgAAhgAAABAQEAABAAQAKAEAAG4DAAAwMAAAAQAIAKgOAACWBAAAICAAAAEA
         CACoCAAAPhMAABAQAAABAAgAaAUAAOYbAAAwMAAAAQAgAKglAABOIQAAICAAAAEAIACoEAAA9kYAABAQ
